docs/theme/styles/layout.css
html,
body {
  position: relative;
  width: 100%;
  height: 100%;
}

body {
  margin: 0;
  padding: 0px;
  box-sizing: border-box;
}

/* Top bar */
header {
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100vw;
  height: var(--topbar-height);
  line-height: var(--topbar-height);
  background-color: var(--white);
  box-shadow: 0 0 15px -5px var(--dark);
  z-index: 1001;

  display: flex;
  flex-wrap: wrap;
}

header section {
  margin: 0px 1em;
  flex-grow: 1;
  text-align: center;
}

header section:first-child {
  text-align: left;
}

header section:last-child {
  text-align: right;
}

header section ul {
  margin: 0px;
  padding: 0px;
}

header section li {
  display: inline-block;
  margin: 0 0.5em;
}

header section li:last-child {
  margin-right: 0;
}

header section li a {
  color: var(--text);
}

header section h1 {
  font-size: 2rem;
  font-weight: 400;
  margin: 0;
}

header section img {
  max-height: var(--topbar-height);
  width: auto;
}

header section h1 a {
  color: var(--primary);
}
header section h1 a:hover {
  text-decoration: none;
}

/* Sidebar navigation */
nav {
  position: fixed;
  top: var(--topbar-height);
  left: 0px;
  width: var(--sidebar-width);
  height: 100vh;
  background-color: var(--secondary);
  box-shadow: 0 0 15px -5px var(--dark);
  overflow-x: hidden;
  z-index: 1000;
  color: var(--text-sidebar);
}

nav a {
  color: var(--text-sidebar-links);
}

nav ul {
  display: block;
  padding: 0 0.5em 0 2em;
  text-transform: uppercase;
  font-weight: 600;
}

nav ul ul {
  display: block;
  padding: 0 0 0.3em 1em;
  text-transform: initial;
  font-weight: 400;
}

nav ul li {
  display: block;
  padding: 0;
  margin: 0 0 0.5em 0;
}

nav ul li li {
  margin: 0;
}

nav a:hover,
nav a.active {
  text-decoration: underline;
}
nav a.active::after {
  float: right;
  content: url('data:image/svg+xml;utf8,<svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g><path fill="white" d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z" /></g></svg>');
}

.showNav {
  position: fixed;
  bottom: 10px;
  left: 10px;
  width: 37px;
  height: 37px;
  z-index: 10101;
  border: 1px solid var(--dark);
  background-color: var(--white);
  cursor: pointer;
}

/* Content */
main {
  padding-top: var(--topbar-height);
  margin-left: var(--sidebar-width);
  background-color: var(--bg-light);
  min-height: calc(100vh - var(--topbar-height));
  max-width: 70em;
}

main.fullscreen {
  margin: 0 auto;
}

article {
  padding: 0 4em;
}

article img {
  display: block;
  max-width: 100%;
  height: auto;
  margin: 0 auto;
}

main.mobile {
  margin-left: 0px;
  max-width: 100%;
}

main.mobile article {
  padding: 0 1em;
}

/* Example block */
.example {
  border: 1px solid var(--example-border);
  margin: 25px;
}

/* .example > .result{} */
.example > .code {
  border-top: 1px solid var(--example-border);
}

/* Properties block */

.properties {
  position: relative;
  display: block;
  border: 1px solid var(--props-border);
  margin: 25px;
  padding: 0.3em;
}

.properties dd,
.properties dt {
  display: inline-block;
  margin: 0px;
}

/*name*/
.properties dt {
  width: 12em;
  font-weight: bold;
  padding-top: 0.5em;
}

.properties dt.required {
  text-decoration: underline;
}

/*type*/
.properties dt + dd {
  color: var(--props-border);
  padding-top: 0.5em;
}

.properties dfn {
  display: inline-block;
  padding: 0 0.3em;
  color: var(--props-types-text);
  background: var(--props-types-bg);
  border: 1px solid var(--props-types-border);
  border-radius: 0.3em;
  margin-right: 0.3em;
  font-style: normal;
  font-family: var(--font-mono);
  font-size: 0.8em;
  letter-spacing: -0.05em;
}

.properties dfn i {
  color: var(--props-oneof-text);
}

/*default*/
.properties dt + dd + dd {
  width: 100%;
  color: var(--props-default-text);
  padding-top: 0.3em;
}

/*description*/
.properties dt + dd + dd + dd {
  display: block;
  border-bottom: 1px solid var(--props-devider);
  padding: 0 0.3em 0.3em 12em;
  margin-top: -1em;
}

.properties dd:last-of-type {
  border-bottom: none;
}

